fixing spacing in intelliresponse box

--- a/hooks/intelliresponse.css
+++ b/hooks/intelliresponse.css
@@ -22,12 +22,13 @@
 .askForm {
 	position: relative;
 /* 	right: -60px; */
+	margin-bottom: 1em;
 }
 
 
 h3 {
 	position: relative;
-	right: -60px;
+/* 	right: -60px; */
 	margin-top:5px;
 }
 
